--- a/exercise_2/resolver/Gemfile
+++ b/exercise_2/resolver/Gemfile
@@ -4,7 +4,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '3.1.2'
 
 gem 'rails', '~> 6.1.6'
-gem 'pg', '~> 1.3', '>= 1.3.5'
+gem 'mysql2'
 gem 'puma', '~> 5.0'
 gem 'sass-rails', '>= 6'
 gem 'webpacker', '~> 5.4'
